[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discardapi"
version = "0.1.0"
description = "Python demo client for Discard API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
  { name = "Qasim Ali", email = "discardapi@gmail.com" }
]

dependencies = [
  "requests"
]
